--- a/_config.yml
+++ b/_config.yml
@@ -279,5 +279,13 @@ defaults:
       comments: # true
       share: true
       related: true
-      
+   # _pages 부분입니다.
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+  # >>>>>>>>>>>>>>>>>>>> 여기까지 추가 됨
+  
 remote_theme : mmistakes/minimal-mistakes
