--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "SeokMin_Lee"
-  avatar           : "/assets/images/IMG_2576.jpg" # path of avatar image, e.g. "/assets/images/IMG_2576.jpg"
+  avatar           : "/assets/images/b.jpg" # path of avatar image, e.g. "/assets/images/IMG_2576.jpg"
   bio              : ""
   location         : "Seoul, KR"
   email            :
