--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links
 main:
-  - title: ""
+  - title: ![ex_screenshot](../assets/images/blind.png)
     url: /portfolio/
   - title: "About"
     url: /about/
