--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links
 main:
-  - title: ![ex_screenshot](../assets/images/blind.png)
+  - title: " "
     url: /portfolio/
   - title: "Category"
     url: /post/  
