--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "en-US"
-title                    : "LEEKATME"
-title_separator          : "-"
+title                    : ""
+title_separator          : ""
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "SeokMin Lee"
 description              : "My_first_hompage"
@@ -25,7 +25,7 @@ url                      : "https://leesk212.github.io" # the base hostname & pr
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/asset/images/20200507211054_awyshrbh.jpg" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/asset/images/20200507211054_awyshrbh.jpg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
