--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
       url: "https://github.com/leesk212"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://www.instagram.com/leekatme/"
+      url: "https://www.instagram.com/stone_mean_/"
 
 # Site Footer
 footer:
