--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/leesk212"
-
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://www.instagram.com/meanleess/"
 
 # Site Footer
 footer:
