--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "en-US"
-title                    : ""
-title_separator          : "_>"
+title                    : "out-of-the.box"
+title_separator          : "<_"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Seokmin Lee"
 description              : "My_first_hompage"
