--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "en-US"
-title                    : "out-of-the.box"
+title                    : "out.of.the.box"
 title_separator          : "<_"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Seokmin Lee"
