--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,9 +6,9 @@ main:
     url: /post/  
   - title: "Timeline"
     url: /about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
+  - title: "Tag"
+    url: /tags/
+  - title: "Category"
+    url: /categories/
   # - title: "Sitemap"
   #   url: /sitemap/
