--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "outofthe.box"
 title_separator          : "<_"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Seokmin Lee"
-description              : "My_first_hompage"
+description              : "Blog"
 url                      : "https://leesk212.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -93,7 +93,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Seokmin Lee"
+  name             : ""
   avatar           : "" # path of avatar image, e.g. "/assets/images/IMG_2576.jpg"
   bio              : ""
   location         : "Seoul, KR"
