--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : ""
   avatar           : "" # path of avatar image, e.g. "/assets/images/IMG_2576.jpg"
-  bio              : ""
+  bio              : "Security, A.I., Python"
   location         : "Seoul, KR"
   email            :
   links:
