--- a/_config.yml
+++ b/_config.yml
@@ -264,7 +264,10 @@ compress_html:
   ignore:
     envs: development
 
-
+deploy:
+  type: git
+  repo: 'https://github.com/leesk212/leesk212.github.io'
+  branch: master
 sitemap:
   path: sitemap.xml
   tag: false
