--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "Seokmin Lee"
 description              : "Blog"
 url                      : "https://leesk212.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "leesk212/leesk212.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   :  # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/ay.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -286,20 +286,6 @@ defaults:
       layout: single
       author_profile: true
   # >>>>>>>>>>>>>>>>>>>> 여기까지 추가 됨
-
-deploy:
-  type: git
-  repo: 'https://github.com/leesk212/leesk212.github.io'
-  branch: master
-sitemap:
-  path: sitemap.xml
-  tag: false
-  category: false
-robotstxt:
-  useragent: '*'
-  allow:
-    - /
-  sitemap: https://leesk212.github.io/sitemap.xml
 
 
 remote_theme : mmistakes/minimal-mistakes
