--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "<_"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Seokmin Lee"
 description              : "Blog"
-url                      : "https://leesk212.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://leesk212.github.io 
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "leesk212/leesk212.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   :  # path of fallback teaser image, e.g. "/assets/images/500x300.png"
