--- a/_config.yml
+++ b/_config.yml
@@ -90,6 +90,7 @@ exclude:
   - tmp
   - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
+  - sitemap.xml
 keep_files:
   - .git
   - .svn
