--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,7 @@ timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 # Plugins (previously gems:)
 plugins:
-  - jekyll-sitemap
+#  - jekyll-sitemap
   - jekyll-include-cache
  
 #   - jekyll-paginate
@@ -141,7 +141,7 @@ plugins:
 
 # # mimic GitHub Pages with --safe
 whitelist:
-  - jekyll-sitemap
+#  - jekyll-sitemap
   - jekyll-include-cache
 #   - jekyll-paginate
 
@@ -187,11 +187,6 @@ compress_html:
 
 # Defaults
 defaults:
-  - scope:
-      path: ""
-      type: root
-  - value:
-      sitemap: true
   # _posts
   - scope:
       path: ""
