--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-title                    : "outofthe.black.box"
+title                    : "outoftheblack.box"
 name                     : "Seokmin Lee"
 description              : "Blog"
 url                      : https://leesk212.github.io 
