--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ words_per_minute         : 200
 author:
   name             : 
   avatar           : 
-  bio              : "Security, A.I., Python"
+  bio              : "Security, Cloud, A.I."
   location         : "Seoul, KR"
   email            : 
   links:
